@@ -23,9 +23,11 @@
   - Improved handling of Ctrl+C/Ctrl+Break for shell-
     based DOS programs. (Wengier)
   - Added menu options "Display TTF blinking cursor"
-    and "Auto-detect CJK box-drawing symbols" under
+    and "CJK: Auto-detect box-drawing symbols" under
     "Video" => "TTF options" menu group to toggle the
-    TTF options ttf.blinkc & ttf.autoboxdraw. (Wengier)
+    TTF options ttf.blinkc and ttf.autoboxdraw, also a
+    menu option "CJK: Switch DBCS/SBCS mode" to toggle
+    between DBCS and SBCS modes temporarily. (Wengier)
   - Command-line option -fastlaunch will now suppress
     messages by "automountall=true" option. (Wengier)
   - The return value of AL in Int21/AX=0Eh is no longer
